--- a/bib4450.bib
+++ b/bib4450.bib
@@ -278,3 +278,17 @@ journal = {American Journal of Epidemiology}
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Empirical_distribution_function&oldid=1300940691}",
     note = "[Online; accessed 14-August-2025]"
   }
+  
+@book{casella24,
+  title={Statistical inference},
+  author={Casella, George and Berger, Roger},
+  year={2024},
+  publisher={Chapman and Hall/CRC}
+}
+
+@book{resnick19,
+  title={A probability path},
+  author={Resnick, Sidney},
+  year={2019},
+  publisher={Springer}
+}
