--- a/bib4450.bib
+++ b/bib4450.bib
@@ -292,3 +292,12 @@ journal = {American Journal of Epidemiology}
   year={2019},
   publisher={Springer}
 }
+
+@misc{wikiSklar,
+    author = "{Wikipedia contributors}",
+    title = "Copula (statistics)\#Sklar's Theorem: {Wikipedia}{,} The Free Encyclopedia",
+    year = "2025",
+    url = "https://en.wikipedia.org/w/index.php?title=Copula_(statistics)&oldid=1303484991",
+    note = "[Online; accessed 18-August-2025]"
+  }
+
