--- a/syllabus.tex
+++ b/syllabus.tex
@@ -151,7 +151,9 @@ Email: jessewheeler@isu.edu\\
 Office: PS 314C\\
 Office Hours: 
 \begin{itemize}
-  \item TBD
+  \item Tuesdays + Thursdays 12:15 pm - 1:30 pm (right after class).
+  \item Mondays + Wednesdays 9:45 am - 11:00 am.
+  \item Also by appointment if necessary.
 \end{itemize}
 
 You can contact me during office hours or via Email. 
