--- a/03/main.Rnw
+++ b/03/main.Rnw
@@ -395,12 +395,352 @@ Chapter \CHAPTER: Joint Distributions}
     f_X(x) &= \int_{-\infty}^\infty f(x, y)dy \\
     &= \int_{-\infty}^\infty \frac{1}{\pi}\times 1[x^2 + y^2 \leq 1]dy\\
     &= \int_{-\sqrt{1 - x^2}}^{\sqrt{1 - x^2}} \frac{1}{\pi}dy \\
-    &= \frac{2}{\pi} \sqrt{1 - x^2}, \quad -1 \leq x \leq 1. 
+    &= \frac{2}{\pi} \sqrt{1 - x^2}, \quad -1 \leq x \leq 1.
   \end{align*}
   }
   
 \end{itemize}
 
+\end{frame}
+
+\section{Independent Random Variables}
+
+\begin{frame}[allowframebreaks]{Independence}
+  \begin{block}{Definition: Independent Random Variables}
+    Random variables $X_1, X_2, \ldots, X_n$ are said to be \alert{independent} if their joint cdf factors into the product of their marginal cdf's:
+    $$
+    F(x_1, x_2, \ldots, x_n) = F_{X_1}(x_1)F_{X_2}(x_2)\cdots F_{X_n}(x_n)
+    $$
+    for all $x_1, x_2, \ldots, x_n$.
+  \end{block}
+  
+  \begin{itemize}
+    \item This definition holds for both continuous and discrete random variables.
+    \item For discrete RVs, it is equivalent to state that their joint pmf factors.
+    \item For continous RVs, it is equivalent to state that their joint pdf factors.
+    
+    \framebreak
+    
+    \item To see why this is true, consider the case of two RVs, $X, Y$.
+    \item From the definition, if they are independent, then $F(x, y) = F_X(x)F_Y(y)$.
+    \item Taking the second mixed partial derivative makes it immediately clear that the joint pdf $f(x, y)$ factors (assuming all densities exist). 
+    \item Conversely, suppose that the densities factor. Then by definition:
+    \begin{align*}
+      F(x, y) &= \int_{-\infty}^x \int_{-\infty}^y f(u, v) dvdu \\
+      &= \int_{-\infty}^x \int_{-\infty}^y f_X(u)f_Y(v) dvdu \\
+      &= \Big(\int_{-\infty}^x f_X(u) du\Big)\Big(\int_{-\infty}^y f_Y(v) dv\Big) \\
+      &= F_X(x)F_Y(y).
+    \end{align*}
+    
+    \item It can also be shown that the definition implies that if $X$ and $Y$ are independent, then
+    $$
+    P(X \in A, Y \in B) = P(X \in A)P(X \in B).
+    $$
+    \item Furthermore, if $g$ and $h$ are functions on $\R$, then $Z = g(X)$ and $W = h(Y)$ are also independent.
+  \end{itemize}
+  
+\end{frame}
+
+\section{Conditional Distributions}
+
+\subsection{Discrete random variables}
+
+\begin{frame}[allowframebreaks]{Conditional distributions: discrete RVs}
+  \begin{itemize}
+    \item If $X$ and $Y$ are jointly distributed discrete RVs, the \emph{conditional probability} that $X = x_i$ given that $Y = y_i$ is
+    \begin{align*}
+      P(X = x_i | Y = y_i) &= \frac{P(X = x_i, Y = y_i)}{P(Y = y_i)} \\
+      &= \frac{p_{XY}(x_i, y_i)}{P_Y(y_i)},
+    \end{align*}
+    \item If $p_Y(y_i) = 0$, the probability above is defined to be zero.
+    \item We denote this conditional probability as $p_{X|Y}$. 
+    \item It's important to note that the conditional pmf is a genuine pmf, as it is non-negative and sums to one.
+    \item If $X$ and $Y$ are independent, $p_{Y|X}(y|x) = p_Y(y)$.
+  
+  \framebreak
+  
+    \item Let's return to a previous joint pmf example (Table~\ref{tab:freq2}).
+  
+  \end{itemize}
+
+  \begin{table}
+  \begin{tabular}{c|cccc}
+    & $y$             &             &                 &              \\\hline
+  $x$ &           $0$ &           $1$ &           $2$ &          $3$ \\\hline
+  $0$ & $\frac{1}{8}$ & $\frac{2}{8}$ & $\frac{1}{8}$ &          $0$ \\
+  $1$ &           $0$ & $\frac{1}{8}$ & $\frac{2}{8}$ & $\frac{1}{8}$
+  \end{tabular}
+  \caption{\label{tab:freq2}Frequency table for $X$ and $Y$, flipping a fair coin three times.}
+  \end{table}
+  
+  \begin{itemize}
+    \item The conditional frequency function of $X$ given $Y = 1$ is:
+    \begin{align*}
+      p_{X|Y}(0|1) &= \frac{2/8}{3/8} = 2/3 \\
+      p_{X|Y}(1|1) &= \frac{1/8}{3/8} = 1/3
+    \end{align*}
+  \end{itemize}
+ 
+ \framebreak
+ 
+ \begin{itemize}
+  \item The definition of the conditional frequency can be reexpressed as
+  $$
+  p_{XY}(x, y) = p_{X|Y}(x|y)p_Y(y).
+  $$
+  \item By summing up over all possible values of $y$, we have the following
+  $$
+  p_X(x) = \sum_y p_{X|Y}(x|y)p_Y(y).
+  $$
+  \item Both of these identities resemble what we have already seen previously when talking about probabilities: The multiplication principle and the law of total probability.
+ \end{itemize}
+ 
+ \framebreak
+  
+  \begin{exampleblock}{Example: Counting particles}
+    Suppose that a particle counter is imperfect; for each particle, it detects the particle with probability $0 < p < 1$. If the number of incoming particles in a unit of time is a Poisson distribution with parameter $\lambda$, what is the distribution of the number of counted particles? 
+  \end{exampleblock}
+  
+  \mode<article>{
+  Let $N$ denote the true number of particles, and $X$ the number of counted particles. Because the probability that a particle is counted is independent, then if $N = n$, we have $n$ independent Bernoulli random variables.
+  In other words, $X|N = n$ has a binomial distribution with parameters $n$ and $p$. By the law of total probability,
+  \begin{align*}
+    P(X = k) &= \sum_{n} p_{X|N}(x|n)p_N(n) \\
+    &= \sum_{n = k}^\infty \binom{n}{k}p^k(1-p)^{n-k} \frac{\lambda^ne^{-\lambda}}{n!} \\
+    &= p^ke^{-\lambda}\sum_{n = k}^\infty \frac{n!}{(n-k)!k!}(1-p)^{n-k} \frac{\lambda^{(n-k)}\lambda^k}{n!} \\
+    &= \frac{(\lambda p)^k}{k!}e^{-\lambda}\sum_{n = k}^\infty \lambda^{n-k}\frac{(1-p)^{n-k}}{(n-k)!} \\
+    &= \frac{(\lambda p)^k}{k!}e^{-\lambda}\sum_{j = 0}^\infty \lambda^{j}\frac{(1-p)^{j}}{j!} \\
+    &= \frac{(\lambda p)^k}{k!}e^{-\lambda}e^{\lambda(1-p)} \\
+    &= \frac{(\lambda p)^k}{k!}e^{-\lambda p}
+  \end{align*}
+  And therefore we see that the distribution of $X$ is a Poisson distribution with parameter $\lambda p$. This is a useful derivation for any situation where events occur following a Poisson process, and then with some probability $p$ and additional, conditional event occurs. For instance, $N$ might be the number of traffic accidents in a given time period, and each accident being fatal or non-fatal with probability $p$. Then $X$ would be the number of fatal accidents.
+  }
+  
+\end{frame}
+
+\subsection{Continuous Random Variables}
+
+\begin{frame}[allowframebreaks]{The continuous case}
+  \begin{itemize}
+    \item Although a formal argument is beyond the scope of this course, the definition for conditional density of $Y|X$ will be analogous to the discrete case.
+  \end{itemize}
+  
+  \begin{block}{Definition: Conditional density}
+    Let $X,Y$ be jointly continuous random variables with joint density $f_{XY}(x, y)$ and marginal densities $f_X(x)$ and $f_Y(y)$, respectively. Then the conditional density of $Y$ given $X$ is defined to be
+    $$
+    f_{Y|X}(y|x) = \frac{f_{XY}(x, y)}{f_X(x)},
+    $$
+    if $0 < f_X(x) < \infty$, and $0$ otherwise.
+  \end{block}
+  
+  \framebreak
+  
+  \begin{itemize}
+    \item A heuristic argument of why this definition makes sense is provided in \citet[][Section~3.5.2]{rice07} using differentials. 
+    \item With our definition, we can express the joint density in terms of the marginal and conditional densities:
+    $$
+    f_{XY}(x, y) = f_{Y|X}(y | x)f_X(x).
+    $$
+    \item We often use this expression to find marginal densities, using principles we have already discussed.
+    $$
+    f_Y(y) = \int_{\R} f_{XY}(x, y) dx = \int_{\R} f_{Y|X}(y|x)f_X(x)dx.
+    $$
+    \item We can think of the above expression as the law of total probability for the continuous case.
+  \end{itemize}
+  
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Example: finding conditional densities}
+  \begin{itemize}
+    \item Let $X$ and $Y$ be jointly distributed random variables with joint and marginal densities
+    \begin{align*}
+      f_{XY}(x, y) &= \lambda^2 e^{-\lambda y}, \quad 0 \leq x \leq y \\
+      f_X(x) &= \lambda e^{-\lambda x}, \quad x\geq 0 \\
+      f_Y(y) &= \lambda^2 y e^{-\lambda y}, \quad y \geq 0
+    \end{align*}
+    \item Note that if $x$ is held constant, the joint density decays exponentially in $y$ for $y \geq x$.
+    \item If $y$ is held constant, the joint density is constant for $0 \leq x \leq y$. 
+    
+    \framebreak
+    
+    \item Find the conditional densities for $Y|X$ and $X|Y$.
+  \end{itemize}
+  
+  \mode<article>{
+  $$
+  f_{Y|X}(y | x) = \frac{\lambda^2e^{-\lambda y}}{\lambda e^{-\lambda x}} = \lambda e^{-\lambda(y - x)}, \quad y \geq x.
+  $$
+  This density follows our intuition of what happens when $x$ is fixed, namely that $y$ appeared to decay exponentially. Now we see that $Y|X$ is exponentially distributed on the interval $[x, \infty)$. Now for $X|Y$,
+  $$
+  f_{X|Y}(x | y) = \frac{\lambda^2 e^{-\lambda y}}{\lambda^2 y e^{-\lambda y}} = 1/y, \quad 0 \leq x \leq y.
+  $$
+  Thus the conditional density of $X$ given $Y = y$ is uniform on the interval $[0, y]$.
+  }
+  
+  \framebreak
+  
+  \begin{itemize}
+    \item Suppose we wanted to generate samples from the joint distribution $(X, Y)$; how can this be done?
+  
+    \item  Using what we have found about the conditional distributions, there are two simple ways for this to be done. Recall that the joint density is $f_{XY}(x, y) = f_{X|Y}(x|y)f_Y(y) = f_{Y|X}(y|x)f_X(x)$.
+    \begin{enumerate}
+      \item We could generate $X$, which is an exponential random variable $(f_X(x))$. Then, we could generate $Y$ conditioned on the simulated value of $X = x$, which follows an exponential distribution on the interval $[x, \infty)$.
+      \item Similarly, we can note that $Y$ has a gamma distribution, and therefore generate a $y$ following a gamma distribution, and then generate a value from $X|Y = y$, which is uniform on $[0, y]$.
+    \end{enumerate}
+  \end{itemize}
+  
+\end{frame}
+
+\begin{frame}[allowframebreaks]{The rejection method}
+
+\begin{itemize}
+  \item We are often interested in generating random variables from a density function.
+  \item If we have a closed form of the inverse cdf, we can use the ``inverse cdf method" (Proposition~2.3).
+  \item If a closed-form of the inverse cdf is not available, a commonly used approach is known as \alert{rejection sampling}.
+  
+  \framebreak
+  
+  \item Setup: let $f$ be a density function we wish to simulate from, that is non-zero on an interval $[a, b]$.
+  \item Pick a function $M(X)$ such that $M(x)\geq f(x)$ on $[a, b]$, and let
+  $$
+  m(x) = \frac{M(x)}{\int_{a}^{b} M(x)dx}.
+  $$
+  \item Note that $m(x)$, as defined, is a probability density function. Then, to generate RV with density $f$, we can do the following:
+  \begin{itemize}
+    \item[Step 1:] Generate $T$ with density $m$.
+    \item[Step 2:] Generate $U \sim U[0, 1]$ independent of $T$. \alert{If} $M(T) \times U \leq f(T)$, then we ``accept" $T$ as a sample $(X = T)$; \alert{otherwise}, we ``reject" and go back to Step 1.
+  \end{itemize}
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Rejection Method Figure}
+
+  \begin{itemize}
+
+  \item A geometric justification is randomly throwing a dart (uniformly) at Figure~\ref{fig:reject}.
+  
+  \begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.55\textwidth]{reject.png}
+    \caption{\label{fig:reject}Illustration of the rejection method, copied from \citet[][Figure~3.15]{rice07}.}
+  \end{figure}
+  
+  \item If the dart lands below the curve $f$, record the $x$ coordinate; otherwise, reject it. With enough throws, the distribution of $x$ coordinates will be proportional to the height of the curve.
+  
+  \end{itemize}
+  
+\end{frame}
+
+\begin{frame}{Rejection sampling}
+  \begin{itemize}
+    \item A more formal argument using differentials is given in \citet[Example~D][Figure~3.15]{rice07}.
+    \item In order for the rejection method to be worth-while (computationally efficient), it is important that the algorithm has high-acceptance (good choice of $M$), otherwise you may need a large number of samples because many are being rejected.
+  \end{itemize}
+\end{frame}
+
+\section{Functions of Jointly Distributed Random Variables}
+
+\begin{frame}[allowframebreaks]{Convolutions}
+  \begin{itemize}
+    \item Suppose that $X$ and $Y$ are discrete random variables that take values on the integers and joint pmf $p(x, y)$. 
+    \item Find the pmf of $Z = X + Y$. 
+    
+    \item Note that $Z = z$ only when $X = x$ and $Y = z - x$, whenever $x$ is an integer.
+    \item Thus, using the law of total probability, we can write 
+      $$
+      p_Z(z) = \sum_{x = -\infty}^\infty p(x, z-x).
+      $$
+    \item If $X$ and $Y$ are independent, then $p(x, y) = p_X(x)P_Y(y)$, and
+      $$
+      p_Z(z) = \sum_{x = -\infty}^\infty p_X(x)p_Y(z-x).
+      $$
+    \item This sum is called the \alert{convolution} of the sequences $p_X$ and $p_Y$. 
+    
+    \item The continuous case is similar. Let $X$ and $Y$ be jointly continuous RVs, and $Z = X + Y$.
+    \item If we want to find the cdf of $Z$, then:
+    \begin{align*}
+      F_Z(z) &= P(Z \leq z) \\
+             &= P(X + Y \leq z) \\
+             &= \int\int_{\{x + y \leq z\}} f(x, y)\, dy\,dx \\
+             &= \int_{-\infty}^\infty \int_{-\infty}^{z-x} f(x, y)\, dy\,dx \\
+             &= \int_{-\infty}^\infty \int_{-\infty}^{z} f(x, v-x) \, dv\,dx \\
+             &= \int_{-\infty}^z \int_{-\infty}^{\infty} f(x, v-x) \, dx\,dv 
+    \end{align*}
+    \item Differentiating both sides, the fundamental theorem of calculus (with proper assumptions) gives
+    $$
+    f_Z(z) = \int_{-\infty}^\infty f(x, z-x) dx
+    $$
+    
+    \item Like in the discrete case, if $X$ and $Y$ are independent, then
+    $$
+    f_Z(z) = \int_{-\infty}^\infty f_X(x)f_Y(z-x) dx
+    $$
+    \item This integral is called the \alert{convolution} of the functions $f_X$ and $f_Y$. 
+  \end{itemize}
+  
+  \framebreak
+  
+  \begin{exampleblock}{Example: Sum of Exponential RVs}
+    Suppose that the lifetime of an electrical component is exponentially distributed with rate $\lambda$, and that and independent and identical backup is available. If the system operates as long as one of the components is functional, and the components will not be replaced if they fail, what is the distribution of the life of the system?
+  \end{exampleblock}
+
+  \emph{Solution:}
+  
+  \mode<article>{
+  \vspace{2mm}
+    Let $T_1$ and $T_2$ denote the lifetimes of the two component, respectively. The lifetime of the system is $X = T_1 + T_2$. Thus, the pdf of $X$ can be calculated as the convolution:
+    \begin{align*}
+    f_X(x) &= \int_{-\infty}^\infty f_X(x)f_Y(z-x)dx \\
+    &= \int_{0}^x \lambda e^{-\lambda t} \times \lambda e^{-\lambda (x - t)}dt \\
+    &= \lambda^2 \int_{0}^x e^{-\lambda x}dt \\
+    &= \lambda^2 x e^{-\lambda x}, \quad x \geq 0.
+    \end{align*}
+  }
+
+  \framebreak
+
+  \begin{itemize}
+    \item In the previous example, note carefully the change in integration:
+    \begin{itemize}
+      \item The exponential density is only positive when $t > 0$, and zero every where else.
+      \item Thus, from $(-\infty, 0)$, the integral is zero.
+      \item Similarly, we evaluate the density at $x - t$, and hence when $t > x$, the integral is also zero.
+    \end{itemize}
+    \item You may notice that the density of $X = T_1 + T_2$ that we calculated is the same as a gamma distribution with parameters $2$ and $\lambda$.
+  \end{itemize}
+
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Quotients of random variables}
+  \begin{itemize}
+    \item Let $X$ and $Y$ be jointly continuous random variables, and let $Z = Y/X$.
+    \item Our derivation for the pdf of $Z$ is similar as what we did with the sum: find the cdf, then take the derivative.
+    \item $F_Z(z) = P(Z \leq z) = P(Y/X \leq z)$. Thus, we are interested in the probability of the set $\{x, y: y/x \leq z\}$.
+    \item We have to be a little careful about what happens if $X = 0$, so we will split it into two parts: 
+    \begin{itemize}
+      \item If $x > 0$, then the set is $y \leq xz$.
+      \item If $x < 0$, then the set is $y \geq xz$. 
+    \end{itemize}
+    Thus,
+    $$
+      F_Z(z) = \int_{-\infty}^0 \int_{xz}^\infty f(x, y)\, dy\, dx + \int_{0}^{\infty} \int_{-\infty}^{xz} f(x, y)\, dy\,dx.
+    $$
+    \item To remove dependence of the inner integrals on $x$, we make the change of variables $y = xv$:
+    \begin{align*}
+      F_Z(z) &= \int_{-\infty}^0 \int_{z}^{-\infty} xf(x, xv)\, dv\, dx + \int_{0}^{\infty} \int_{-\infty}^{z} xf(x, xv)\, dv\,dx \\
+      &= \int_{-\infty}^0 \int_{-\infty}^{z} (-x)f(x, xv)\, dv\, dx + \int_{0}^{\infty} \int_{-\infty}^{z} xf(x, xv)\, dv\,dx \\
+      &= \int_{-\infty}^z \int_{-\infty}^\infty |x| f(x, xv)\, dx\, dv 
+    \end{align*}
+    \item And differentiating both sides, we obtain
+    $$
+    f_Z(z) = \int_{-\infty}^\infty |x| f(x, xz)\, dx.
+    $$
+    \item If $X$ and $Y$ are independent, 
+    $$
+    f_Z(z) = \int_{-\infty}^{\infty} |x|f_X(x)f_Y(xz) dx.
+    $$
+  \end{itemize}
 \end{frame}
 
 \newcommand\acknowledgments{
